Time: 2 ms (95.23%), Space: 45.6 MB (82.71%) - LeetHub